Alert: Fixes alert spacing in RTL (#1599)
commit

--- a/src/MudBlazor/Styles/components/_alert.scss
+++ b/src/MudBlazor/Styles/components/_alert.scss
@@ -83,6 +83,11 @@
     margin-left: 12px;
 }
 
+.mud-application-layout-rtl .mud-alert-icon {
+    margin-right: 0;
+    margin-left: 12px;
+}
+
 .mud-alert-message {
     padding: 9px 0;
 }
@@ -96,6 +101,13 @@
     margin-inline-start: auto;
     margin-inline-end: -8px;
     padding-inline-start: 16px;
+}
+
+.mud-application-layout-rtl .mud-alert-action {
+    margin-right: -8px;
+    margin-left: 0;
+    padding-right: 16px;
+    padding-right: 0;
 }
 
 .mud-application-layout-rtl .mud-alert-action {
